tests/FSharp.Analyzers.Tests/data/loggingtemplatemissingvalues/negative/No warnings for explicit array.fs
module M

    open Microsoft.Extensions.Logging

    let testlog () =
        use factory = LoggerFactory.Create(fun b -> b.AddConsole() |> ignore)
        let logger: ILogger = factory.CreateLogger("Program")

        logger.LogInformation("Foo {one} {two}", [| box 1; box 2 |])
